@@ -9,6 +9,7 @@ Revision history for File-Serialize
  - Mention Markdown serializer in the main documentation.
 
  [ENHANCEMENTS]
+ - transerialize intermediary steps stuff. Lots of it.
 
  [NEW FEATURES]
 
